加入maven构建工具对包和类进行迁移